data/derived/comb/progs/unify/prog7955.ml.out
Characters 162-163:
  let (_, res) = List.fold_left f base args in
                                ^
Error: This expression has type 'a list -> int -> 'a list * int list
       but an expression was expected of type 'a list -> int -> 'a list
       Type 'a list * int list is not compatible with type 'a list 
